--- a/test.yaml
+++ b/test.yaml
@@ -26,7 +26,7 @@ paths:
     delete:
       parameters:
         - description: |
-            <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</img onerror=alert('textarea') src=1>"></form>
+            <form><math><mtext></form><form><mglyph><svg><mtext><input> value="</input></img onerror=alert('textarea') src=1>"></form>
 
           format: int64
           in: path
