--- a/test1.yaml
+++ b/test1.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: Classic API Resource Documentation"><a
-  description: <math><mtext><h1><a><h6></a></h6><mglyph><svg><mtext><input type="text id="search-text" name="query" value="" onfocus="alert(1)" autofocus="></input></h1></textarea></desc></textarea></mtext></mtext></svg></mglyph></option></mtext></math>
+  description: <math><mtext><h1><a><textarea></a><mglyph><svg><mtext><input type="text id="search-text" name="query" value="" onfocus="alert(1)" autofocus="></input></h1></textarea></desc></textarea></mtext></mtext></svg></mglyph></option></mtext></math>
 version: production
 basePath: /JSSResource/"</a>
 produces:
