--- a/test1.yaml
+++ b/test1.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: Classic API Resource Documentation"><a
-  description: <hgroup><p><h6></p><a target="<input type="text" id="search-text" name="query" value="alert(xsss1)" onfocus="alert(xsss1)" autofocus=xsss"></input></a></h6></hgroup>
+  description: <hgroup><h2><pre><a><a target="<input type="text" id="search-text" name="query" value="alert(xsss1)" onfocus="alert(xsss1)" autofocus=xsss"></a></pre></h2></hgroup>
 version: production
 basePath: /JSSResource/"</a>
 produces:
